# tncc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md
examples/: digraphs.c  ex.c
src/: cli.rs  exprast.h  lexer.cpp  lexer.h  main.cpp  main.rs  result.hpp  token.cpp  token.h
src/ast/: expr_ast.h  exprast.h  integer_expr_ast.cpp  integer_expr_ast.h
src/lexer/: lex.rs  mod.rs  regex.rs  token.rs
tests/: lexerTest.cpp
